# metalr-build

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: buildkit.rs  compile.rs  dependency_parser.rs  lib.rs  link.rs
tests/: example 2.h  example1.h  test.metal  warning.metal  warnings.rs
