[package]
name = "metalr-build"
version = "0.1.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buildkit = {git = "https://github.com/drewcrawford/buildkit"}
#buildkit = {path = "../buildkit"}